cmake_minimum_required(VERSION 3.3)
project(demo)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.69.0 COMPONENTS system filesystem regex program_options REQUIRED)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    link_directories(${Boost_LIBRARY_DIR})
    add_executable(demo ${SOURCE_FILES})
    target_link_libraries(demo ${Boost_LIBRARIES})
endif()
# windows 下增加这一段
if(WIN32)
    target_link_libraries(demo wsock32 ws2_32)
endif()